--- a/client/index.html
+++ b/client/index.html
@@ -337,9 +337,9 @@
               <i class="lni lni-vector"></i>
             </div>
             <div class="content">
-              <h3>Carpentry Work</h3>
+              <h3>General Installations</h3>
               <p>
-                  Whether it's fixing a broken cabinet or installing custom shelves, our carpentry services add a touch of craftsmanship to your space.
+                  We install anything you desire, just ask!
               </p>
             </div>
           </div>
@@ -624,8 +624,10 @@
                   <li><a href="">Electrical </a></li>
                   <li><a href="">Appliance</a></li>
                   <li><a href="">HVAC</a></li>
-                  <li><a href="">General Handyman</a></li>
-                  <li><a href="">Locksmith </a></li>
+                  <li><a href="">Painting and Drywall Repair</a></li>
+                  <li><a href="">Carpentry Work</a></li>
+                  <li><a href="">General Installations</a></li>
+
                 </ul>
               </div>
             </div>
