--- a/client/index.html
+++ b/client/index.html
@@ -87,7 +87,7 @@
                       <a class="page-scroll" href="#service">Services</a>
                     </li>
                     <li class="nav-item">
-                      <a class="page-scroll" href="#contact">Contact</a>
+                      <a class="page-scroll" href="#contact">Request</a>
                     </li>
                   </ul>
                 </div>
@@ -111,8 +111,11 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <span class="wow fadeInLeft" data-wow-delay=".2s"
-                >Caring for Your Business, One Service at a Time</span
-              >
+                >Caring for Your Business, One Service at a Time</span>
+               <span class="wow fadeInLeft" data-wow-delay=".2s"
+                ><button type="submit" class="main-btn btn-hover">
+                  <a class="page-scroll" href="#contact">Request Service</a>
+                </button></span>
             </div>
           </div>
           <div class="col-lg-6">
