--- a/client/index.html
+++ b/client/index.html
@@ -111,10 +111,10 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <span class="wow fadeInLeft" data-wow-delay=".2s"
-                >Caring for Your Business, One Service at a Time</span>
+                >Caring for Your Business, One Service at a Time</span><br>
                <span class="wow fadeInLeft" data-wow-delay=".2s"
                 ><button type="submit" class="main-btn btn-hover">
-                  <a class="page-scroll" href="#contact">Request Service</a>
+                  <a class="page-scroll" href="#contact" style="color: white;">Request Service</a>
                 </button></span>
             </div>
           </div>
